# clinic-api

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
api/: __init__.py  conftest.py  main.py  seed.py
api/appointments/: models.py  repository.py  routes.py  schemas.py  services.py
api/auth/: models.py  repository.py  routes.py  schemas.py  services.py
api/core/: __init__.py  config.py  constants.py  enum.py  exceptions.py  rbac.py  security.py
api/departments/: models.py  repository.py  routes.py  schemas.py  services.py
api/doctors/: models.py  repository.py  routes.py  schemas.py  services.py  test_repository.py  test_service.py
api/models/: __init__.py  base.py
migrations/: README  env.py
migrations/versions/: 9a8b7c6d5e4f_create_appointment_tables.py  a2818e200f5a_initial_migration.py  b1c2d3e4f5g6_create_departments_table.py  c3d4e5f6g7h8_create_doctors_tables.py  dedeb6d32b44_adding_indices.py
tests/: conftest.py
tests/appointments/: test_repository.py  test_service.py
tests/auth/: test_repository.py  test_service.py
tests/departments/: test_repository.py  test_service.py
tests/doctors/: test_repository.py  test_service.py
