[tool.poetry]
name = "client-backend-apiv2"
version = "0.1.0"
description = "Production-ready Flask backend with layered architecture and Alembic migrations"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-jwt-extended = "^4.6.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
marshmallow = "^3.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
